# youtube_fetch

./: Batman Loses his Memory PUeE_bDQEVE.json  Cargo.toml  Fluorite Eye's Song 2qcvp5nE4Lc.json  Had I Not Seen the Sun (Instrumental) H4MMaIAPSb8.json  Had I Not Seen the Sun kdV4K17KqAE.json  Vivy (Vo.Kairi Yagi) - Topic UCjgRRBcfN-mNGSASlq8qhLQ.json
src/: main.rs  ryd_struct.rs  write_to_json_funcs.rs  youtube_channel.rs  youtube_get_funcs.rs  youtube_video.rs
