[package]
name = "youtube_fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
serde = {version="1.0", features=["derive"]}
reqwest = {version = "0.12.4", features = ["json"]}
serde_json = "1.0.117"
tokio = {"version"= "1", features=["full"]}
dict = "0.1.5"
serde_derive = "1.0.203"
chrono = "0.4.38"
